# domain/entity/musics.go
@@ -1,8 +1,30 @@
 package entity
 
+import "fmt"
+
 type Music struct {
-	ThumbURL string `json:"thumbURL"`
-	Title    string `json:"title"`
+	YoutubeVideoID string
+	ThumbnailURL   string
+	Title          string
+	YoutubeTags    []string
+	// TODO: IsMemoed bool,
 }
 
 type Musics []Music
+
+func NewMusic(youtubeVideoID, thumbnailURL, title string, tags []string) *Music {
+	return &Music{
+		YoutubeVideoID: youtubeVideoID,
+		ThumbnailURL:   thumbnailURL,
+		Title:          title,
+		YoutubeTags:    tags,
+	}
+}
+
+func (m *Music) IsEqual(other *Music) bool {
+	return other.YoutubeVideoID == m.YoutubeVideoID
+}
+
+func (m *Music) DeepLink() string {
+	return fmt.Sprintf("vnd.youtube://%s", m.YoutubeVideoID)
+}
